--- a/package.json
+++ b/package.json
@@ -24,15 +24,16 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "^4.0.0-rc.0",
-    "@material-ui/icons": "^4.2.0",
+    "@material-ui/core": "^4.3.1",
+    "@material-ui/icons": "^4.2.1",
     "axios": "^0.19.0",
     "clsx": "^1.0.4",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "^3.0.1",
+    "typescript": "^3.5.3"
   },
   "devDependencies": {
     "babel-eslint": "10.0.1",
