--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "portfolio-organizer",
-  "version": "0.1.0",
+  "name": "brettoberg.com",
+  "version": "4.0.0",
+  "description": "Portfolio website",
   "private": true,
+  "main": "./build/server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "build": "npm run build:server && npm run build:webpack:server && npm run build:webpack:client",
+    "build:server": "rm -rf server/dist && ./node_modules/.bin/tsc --project ./tsconfig.json",
+    "build:webpack:client": "./node_modules/.bin/webpack --config ./config/webpack.client.config.js",
+    "build:webpack:server": "./node_modules/.bin/webpack --config ./config/webpack.server.config.js",
+    "dev": "./node_modules/.bin/tsc && concurrently \".node_modules/.bin/tsc -w\" \"./node_modules/.bin/nodemon ./server/dist/server.js\"",
+    "lint": "npm run lint:client && npm run linst:server",
+    "lint:client": "./node_modules/.bin/eslint src",
+    "lint:server": "./node_modules/.bin/tslint --config ./tslint.json --project /.tsconfig.json",
+    "start": "node ./build/server.js"
   },
   "browserslist": {
     "production": [
@@ -24,27 +28,109 @@
     ]
   },
   "dependencies": {
+    "@babel/core": "7.4.3",
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.0",
+    "@svgr/webpack": "4.1.0",
+    "@typescript-eslint/eslint-plugin": "1.6.0",
+    "@typescript-eslint/parser": "1.6.0",
     "axios": "^0.19.0",
+    "babel-eslint": "10.0.1",
+    "babel-jest": "^24.8.0",
+    "babel-loader": "8.0.5",
+    "babel-plugin-named-asset-import": "^0.3.2",
+    "babel-preset-react-app": "^9.0.0",
+    "body-parser": "^1.19.0",
+    "camelcase": "^5.2.0",
+    "case-sensitive-paths-webpack-plugin": "2.2.0",
     "clsx": "^1.0.4",
+    "compression-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
+    "compression": "^1.7.4",
+    "css-loader": "2.1.1",
+    "dotenv": "6.2.0",
+    "dotenv-expand": "4.2.0",
+    "eslint": "^5.16.0",
+    "eslint-config-react-app": "^4.0.1",
+    "eslint-loader": "2.1.2",
+    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-import": "2.16.0",
+    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-plugin-react": "7.12.4",
+    "eslint-plugin-react-hooks": "^1.5.0",
+    "express": "^4.17.1",
+    "file-loader": "3.0.1",
+    "fs-extra": "7.0.1",
+    "html-webpack-plugin": "4.0.0-beta.5",
+    "helmet": "^3.18.0",
+    "http-status": "^1.3.2",
+    "identity-obj-proxy": "3.0.0",
+    "is-wsl": "^1.1.0",
+    "jest": "24.7.1",
+    "jest-environment-jsdom-fourteen": "0.1.0",
+    "jest-resolve": "24.7.1",
+    "jest-watch-typeahead": "0.3.0",
+    "lodash": "^4.17.15",
+    "mini-css-extract-plugin": "0.5.0",
+    "optimize-css-assets-webpack-plugin": "5.0.1",
+    "path": "^0.12.7",
+    "pg": "^7.11.0",
+    "pnp-webpack-plugin": "1.2.1",
+    "postcss-flexbugs-fixes": "4.1.0",
+    "postcss-loader": "3.0.0",
+    "postcss-normalize": "7.0.1",
+    "postcss-preset-env": "6.6.0",
+    "postcss-safe-parser": "4.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-app-polyfill": "^1.0.1",
+    "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.0.1",
-    "typescript": "^3.5.3"
+    "resolve": "1.10.0",
+    "sass-loader": "7.1.0",
+    "semver": "6.0.0",
+    "sequelize": "^5.12.3",
+    "sequelize-json-schema": "^1.3.0",
+    "style-loader": "0.23.1",
+    "swagger-jsdoc": "^3.2.9",
+    "swagger-ui-express": "^4.0.6",
+    "terser-webpack-plugin": "1.2.3",
+    "ts-loader": "^6.0.4",
+    "ts-pnp": "1.1.2",
+    "typescript": "^3.5.3",
+    "url-loader": "1.1.2",
+    "webpack": "4.29.6",
+    "webpack-dev-server": "3.2.1",
+    "webpack-manifest-plugin": "2.0.4",
+    "webpack-node-externals": "^1.7.2",
+    "workbox-webpack-plugin": "4.2.0"
   },
   "devDependencies": {
+    "@types/bluebird": "^3.5.27",
+    "@types/body-parser": "^1.17.0",
+    "@types/compression": "0.0.36",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^4.17.0",
+    "@types/helmet": "0.0.43",
+    "@types/lodash": "^4.14.134",
+    "@types/node": "^12.0.7",
+    "@types/swagger-jsdoc": "0.0.2",
+    "@types/swagger-ui-express": "^3.0.0",
+    "@types/validator": "^10.11.1",
     "babel-eslint": "10.0.1",
+    "concurrently": "^4.1.0",
+    "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.2",
     "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-react": "^7.14.2"
+    "eslint-plugin-react": "^7.14.2",
+    "nodemon": "^1.19.1",
+    "uuid": "^3.3.2"
   },
   "proxy": "https://bo-portfolio-api.herokuapp.com/api/v1"
 }
