--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "build": "npm run build:server && npm run build:webpack:server && npm run build:webpack:client",
     "build:server": "rm -rf server/dist && ./node_modules/.bin/tsc --project ./tsconfig.json",
-    "build:webpack:client": "./node_modules/.bin/webpack --config ./config/webpack.client.config.js",
-    "build:webpack:server": "./node_modules/.bin/webpack --config ./config/webpack.server.config.js",
+    "build:webpack:client": "NODE_ENV=production ./node_modules/.bin/webpack --config ./config/webpack.client.config.js",
+    "build:webpack:server": "NODE_ENV=production ./node_modules/.bin/webpack --config ./config/webpack.server.config.js",
     "dev": "./node_modules/.bin/tsc && concurrently \".node_modules/.bin/tsc -w\" \"./node_modules/.bin/nodemon ./server/dist/server.js\"",
     "lint": "npm run lint:client && npm run linst:server",
     "lint:client": "./node_modules/.bin/eslint src",
@@ -28,7 +28,6 @@
     ]
   },
   "dependencies": {
-    "@babel/core": "7.4.3",
     "@material-ui/core": "^4.3.1",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.3.0",
@@ -38,16 +37,15 @@
     "axios": "^0.19.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "^24.8.0",
-    "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.2",
     "babel-preset-react-app": "^9.0.0",
     "body-parser": "^1.19.0",
     "camelcase": "^5.2.0",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
     "clsx": "^1.0.4",
+    "compression": "^1.7.4",
     "compression-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
-    "compression": "^1.7.4",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
@@ -62,8 +60,8 @@
     "express": "^4.17.1",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
-    "html-webpack-plugin": "4.0.0-beta.5",
     "helmet": "^3.18.0",
+    "html-webpack-plugin": "4.0.0-beta.5",
     "http-status": "^1.3.2",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
@@ -87,6 +85,7 @@
     "react-app-polyfill": "^1.0.1",
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
+    "react-hot-loader": "^4.12.11",
     "react-router-dom": "^5.0.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
@@ -102,12 +101,21 @@
     "typescript": "^3.5.3",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
+    "webpack-dev-middleware": "^3.7.0",
     "webpack-dev-server": "3.2.1",
+    "webpack-hot-middleware": "^2.25.0",
     "webpack-manifest-plugin": "2.0.4",
     "webpack-node-externals": "^1.7.2",
     "workbox-webpack-plugin": "4.2.0"
   },
   "devDependencies": {
+    "@babel/core": "7.4.3",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.5.5",
     "@types/bluebird": "^3.5.27",
     "@types/body-parser": "^1.17.0",
     "@types/compression": "0.0.36",
@@ -119,7 +127,12 @@
     "@types/swagger-jsdoc": "0.0.2",
     "@types/swagger-ui-express": "^3.0.0",
     "@types/validator": "^10.11.1",
+    "@types/webpack": "^4.39.1",
+    "@types/webpack-dev-middleware": "^2.0.3",
+    "@types/webpack-hot-middleware": "^2.16.5",
+    "babel-core": "^6.26.3",
     "babel-eslint": "10.0.1",
+    "babel-loader": "^8.0.6",
     "concurrently": "^4.1.0",
     "dotenv": "^8.0.0",
     "eslint": "^5.16.0",
@@ -130,7 +143,8 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-react": "^7.14.2",
     "nodemon": "^1.19.1",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "webpack-cli": "^3.3.7"
   },
   "proxy": "https://bo-portfolio-api.herokuapp.com/api/v1"
 }
