--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build:server": "rm -rf server/dist && ./node_modules/.bin/tsc --project ./tsconfig.json",
     "build:webpack:client": "NODE_ENV=production ./node_modules/.bin/webpack --config ./config/webpack.client.config.js",
     "build:webpack:server": "NODE_ENV=production ./node_modules/.bin/webpack --config ./config/webpack.server.config.js",
-    "dev": "./node_modules/.bin/tsc && concurrently \".node_modules/.bin/tsc -w\" \"./node_modules/.bin/nodemon ./server/dist/server.js\"",
+    "dev": "./node_modules/.bin/tsc && concurrently \"./node_modules/.bin/tsc -w\" \"./node_modules/.bin/nodemon ./server/dist/server.js\"",
     "lint": "npm run lint:client && npm run linst:server",
     "lint:client": "./node_modules/.bin/eslint src",
     "lint:server": "./node_modules/.bin/tslint --config ./tslint.json --project /.tsconfig.json",
@@ -62,6 +62,7 @@
     "fs-extra": "7.0.1",
     "helmet": "^3.18.0",
     "html-webpack-plugin": "4.0.0-beta.5",
+    "http-proxy-middleware": "^0.19.1",
     "http-status": "^1.3.2",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
@@ -109,6 +110,7 @@
     "workbox-webpack-plugin": "4.2.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.5.5",
     "@babel/core": "7.4.3",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
@@ -116,12 +118,14 @@
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.5.5",
+    "@hot-loader/react-dom": "^16.9.0",
     "@types/bluebird": "^3.5.27",
     "@types/body-parser": "^1.17.0",
     "@types/compression": "0.0.36",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/helmet": "0.0.43",
+    "@types/http-proxy-middleware": "^0.19.3",
     "@types/lodash": "^4.14.134",
     "@types/node": "^12.0.7",
     "@types/swagger-jsdoc": "0.0.2",
