--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -12,3 +12,25 @@ jobs:
     - uses: actions/checkout@v1
     - name: Lint the application
       run: npm run lint
+      
+      
+  test:
+  
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v1
+    - name: Test the application
+      run: npm run test
+
+  build:
+  
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v1
+    - name: Build the Docker image
+      env:
+        ORG: Hi there! My name is
+        APP_NAME: Mona
+      run: docker build . --file Dockerfile --tag $ORG/$APP_NAME:$(date +%s)
