--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -30,4 +30,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag {owner}/{repo}:$(date +%s)
+      env:
+        ORG: bjoberg
+        REPO: portfolio-dashboard
+      run: docker build . --file Dockerfile --tag $ORG/$REPO:$(date +%s)
