Add npm install

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Lint the application
+      run: npm install
       run: npm run lint
       
       
