Add multiline run command

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -11,8 +11,9 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Lint the application
-      run: npm install
-      run: npm run lint
+      run: |
+        npm install
+        npm run lint
       
       
   test:
