--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -4,26 +4,28 @@ on: [push]
 
 jobs:
 
-  lint:
+  setup:
   
     runs-on: ubuntu-latest
     
+    strategy:
+      matrix:
+        node-version: [8.x, 10.x, 12.x]
+
     steps:
     - uses: actions/checkout@v1
-    - name: Lint the application
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: npm install, lint, test, and build
       run: |
         npm install
         npm run lint
-      
-      
-  test:
-  
-    runs-on: ubuntu-latest
-    
-    steps:
-    - uses: actions/checkout@v1
-    - name: Test the application
-      run: npm run test
+        npm run test
+        npm run build
+      env:
+        CI: true
 
   build:
   
