--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -3,11 +3,10 @@ name: CI for all branches
 on: [push]
 
 jobs:
+  build:
 
-  setup:
-  
     runs-on: ubuntu-latest
-    
+
     strategy:
       matrix:
         node-version: [8.x, 10.x, 12.x]
