--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -17,14 +17,22 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - name: npm install, lint, test, and build
-      run: |
-        npm install
-        npm run lint
-        npm run test
-        npm run build
+    - name: install
+      run: npm install
       env:
         CI: true
+    - name: lint
+      run: npm run lint
+      env:
+        CI: true
+    - name: test
+      run: npm run lint
+      env:
+        CI: true
+    - name: build
+      run: npm run build
+      env:
+        CI: true                
 
   # build:
   
