--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -3,7 +3,7 @@ name: CI for all branches
 on: [push]
 
 jobs:
-  build:
+  validate:
 
     runs-on: ubuntu-latest
 
@@ -26,7 +26,7 @@ jobs:
       env:
         CI: true
     - name: test
-      run: npm run lint
+      run: npm run test
       env:
         CI: true
     - name: build
