--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "clsx": "^1.0.4",
     "compression": "^1.7.4",
     "compression-webpack-plugin": "^3.0.0",
+    "cookie-session": "^1.3.3",
     "copy-webpack-plugin": "^5.0.4",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
@@ -62,6 +63,8 @@
     "lodash": "^4.17.15",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
     "pg": "^7.11.0",
     "pnp-webpack-plugin": "1.2.1",
@@ -108,12 +111,15 @@
     "@types/bluebird": "^3.5.27",
     "@types/body-parser": "^1.17.0",
     "@types/compression": "0.0.36",
+    "@types/cookie-session": "^2.0.37",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
     "@types/helmet": "0.0.43",
     "@types/http-proxy-middleware": "^0.19.3",
     "@types/lodash": "^4.14.134",
     "@types/node": "^12.0.7",
+    "@types/passport": "^1.0.1",
+    "@types/passport-google-oauth20": "^2.0.2",
     "@types/validator": "^10.11.1",
     "@types/webpack": "^4.39.1",
     "@types/webpack-dev-middleware": "^2.0.3",
