--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "express": "^4.17.1",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
+    "google-auth-library": "^5.4.1",
     "helmet": "^3.18.0",
     "html-webpack-plugin": "4.0.0-beta.5",
     "http-proxy-middleware": "^0.19.1",
