Add login flow to google login button
- Added eslint rule to allow usage of 'window'
- Added hangleOnClick to GoogleLoginButton
- Added openSnackbar prop to LoginPage
- Create auth service
- Add login method in login page

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,10 @@
 {
   "parser": "babel-eslint",
-  "extends": [
-    "airbnb"
-  ],
-  "plugins": [
-    "react",
-    "import",
-    "node"
-  ],
+  "extends": ["airbnb"],
+  "plugins": ["react", "import", "node"],
+  "globals": {
+    "window": true
+  },
   "rules": {
     "no-console": "error",
     "strict": 0
