Retrieve user info and pass it to the header component
- Add user to header
- Add user avatar to header component
- Update header styles

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,13 @@
 {
   "parser": "babel-eslint",
-  "extends": ["airbnb"],
-  "plugins": ["react", "import", "node"],
+  "extends": [
+    "airbnb"
+  ],
+  "plugins": [
+    "react",
+    "import",
+    "node"
+  ],
   "globals": {
     "window": true
   },
