Create profile menu component
- Add hooks eslint config
- Remove snackbar with userinfo request fails
- Create profile-menu component
- Update header accordingly

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
   ],
   "plugins": [
     "react",
+    "react-hooks",
     "import",
     "node"
   ],
@@ -12,6 +13,8 @@
     "window": true
   },
   "rules": {
+    "react-hooks/rules-of-hooks": "error", // Checks rules of Hooks
+    "react-hooks/exhaustive-deps": "warn", // Checks effect dependencies
     "no-console": "error",
     "strict": 0
   }
