--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "react-dev-utils": "^9.0.1",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.11",
+    "react-markdown": "^4.2.2",
     "react-router-dom": "^5.0.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
@@ -142,6 +143,8 @@
     "eslint-plugin-node": "^9.1.0",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "html-loader": "^0.5.5",
+    "markdown-loader": "^5.1.0",
     "nodemon": "^1.19.1",
     "tslint": "^5.20.0",
     "uuid": "^3.3.2",
