--- a/package.json
+++ b/package.json
@@ -48,12 +48,12 @@
     "dotenv": "6.2.0",
     "dotenv-expand": "4.2.0",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.0",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "google-auth-library": "^5.4.1",
     "helmet": "^3.21.2",
     "html-webpack-plugin": "4.0.0-beta.5",
-    "http-proxy-middleware": "^0.19.1",
     "http-status": "^1.3.2",
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^1.1.0",
@@ -116,8 +116,8 @@
     "@types/cookie-session": "^2.0.37",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.17.0",
+    "@types/express-http-proxy": "^1.5.12",
     "@types/helmet": "0.0.43",
-    "@types/http-proxy-middleware": "^0.19.3",
     "@types/lodash": "^4.14.134",
     "@types/node": "^12.0.7",
     "@types/passport": "^1.0.1",
