--- a/package.json
+++ b/package.json
@@ -130,6 +130,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "10.0.1",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.13.0",
     "concurrently": "^4.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
