--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "brettoberg.com",
-  "version": "4.0.0",
-  "description": "Portfolio website",
+  "name": "bo-portfolio",
+  "version": "4.1.0",
+  "description": "Brett Oberg's portfolio website",
   "private": true,
   "main": "./build/server.js",
   "scripts": {
@@ -66,7 +66,6 @@
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
-    "pg": "^7.11.0",
     "pnp-webpack-plugin": "1.2.1",
     "postcss-flexbugs-fixes": "4.1.0",
     "postcss-loader": "3.0.0",
@@ -83,8 +82,6 @@
     "react-router-dom": "^5.0.1",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
-    "sequelize": "^5.12.3",
-    "sequelize-json-schema": "^1.3.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
     "ts-loader": "^6.0.4",
