--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
     "path": "^0.12.7",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-helmet": "^5.2.1",
+    "react-router-dom": "^5.0.1",
     "resolve": "1.10.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
@@ -118,7 +120,6 @@
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.12.11",
     "react-markdown": "^4.2.2",
-    "react-router-dom": "^5.0.1",
     "tslint": "^5.20.0",
     "webpack-cli": "^3.3.7"
   }
