Test get version

--- a/.github/workflows/default.yml
+++ b/.github/workflows/default.yml
@@ -42,4 +42,5 @@ jobs:
       env:
         ORG: bjoberg
         REPO: portfolio-dashboard
+        VERSION: ${{ node -pe "require('./package.json').version"}}
       run: docker build . --file Dockerfile --tag $ORG/$REPO:$(date +%s)
