--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -35,4 +35,4 @@ jobs:
         GITHUB_ACCESS_TOKEN: ${{ secrets.GITHUB_ACCESS_TOKEN }}
         REPO_OWNER: bjoberg
       run: |
-        ./scripts/release.sh -v $(date +%s)
+        ./scripts/release.sh -v $(node -pe "require('./package.json').version")
