--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bo-portfolio",
-  "version": "4.1.1",
+  "version": "4.2.0",
   "description": "Brett Oberg's portfolio website",
   "private": true,
   "main": "./build/server.js",
@@ -9,7 +9,7 @@
     "build:server": "rm -rf server/dist && ./node_modules/.bin/tsc --project ./tsconfig.json",
     "build:webpack:client": "./node_modules/.bin/webpack --config ./config/webpack.client.config.js",
     "build:webpack:server": "./node_modules/.bin/webpack --config ./config/webpack.server.config.js",
-    "dev": "./node_modules/.bin/tsc && concurrently \"./node_modules/.bin/tsc -w\" \"./node_modules/.bin/nodemon ./server/dist/server.js\"",
+    "dev": "./node_modules/.bin/tsc && concurrently \"./node_modules/.bin/tsc -w\" \"node ./server/dist/server.js\"",
     "lint": "npm run lint:client && npm run lint:server",
     "lint:client": "./node_modules/.bin/eslint src",
     "lint:server": "./node_modules/.bin/tslint --config ./tslint.json --project ./tsconfig.json",
@@ -30,62 +30,35 @@
   "dependencies": {
     "@material-ui/core": "^4.8.0",
     "@material-ui/icons": "^4.5.1",
-    "@svgr/webpack": "4.1.0",
     "axios": "^0.19.0",
-    "babel-jest": "^24.8.0",
-    "babel-plugin-named-asset-import": "^0.3.2",
-    "babel-preset-react-app": "^9.0.0",
     "body-parser": "^1.19.0",
-    "camelcase": "^5.2.0",
-    "case-sensitive-paths-webpack-plugin": "2.2.0",
     "clsx": "^1.0.4",
     "compression": "^1.7.4",
-    "compression-webpack-plugin": "^3.0.1",
     "cookie-session": "^1.3.3",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "2.1.1",
     "dotenv": "6.2.0",
-    "dotenv-expand": "4.2.0",
     "express": "^4.17.1",
     "express-http-proxy": "^1.6.0",
     "file-loader": "3.0.1",
-    "fs-extra": "7.0.1",
     "google-auth-library": "^5.4.1",
     "helmet": "^3.21.2",
     "html-webpack-plugin": "4.0.0-beta.5",
     "http-status": "^1.3.2",
-    "identity-obj-proxy": "3.0.0",
-    "is-wsl": "^1.1.0",
-    "jest": "24.7.1",
-    "jest-environment-jsdom-fourteen": "0.1.0",
-    "jest-resolve": "24.7.1",
-    "jest-watch-typeahead": "0.3.0",
-    "lodash": "^4.17.15",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^2.0.0",
     "path": "^0.12.7",
-    "pnp-webpack-plugin": "1.2.1",
-    "postcss-flexbugs-fixes": "4.1.0",
-    "postcss-loader": "3.0.0",
-    "postcss-normalize": "7.0.1",
-    "postcss-preset-env": "6.6.0",
-    "postcss-safe-parser": "4.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-app-polyfill": "^1.0.1",
-    "react-dev-utils": "^9.0.1",
-    "react-dom": "^16.8.6",
+    "react-helmet": "^5.2.1",
     "react-hot-loader": "^4.12.11",
-    "react-markdown": "^4.2.2",
     "react-router-dom": "^5.0.1",
     "resolve": "1.10.0",
-    "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
     "ts-loader": "^6.0.4",
-    "ts-pnp": "1.1.2",
     "typescript": "^3.5.3",
     "url-loader": "1.1.2",
     "webpack": "4.29.6",
@@ -124,10 +97,12 @@
     "@types/webpack-hot-middleware": "^2.16.5",
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
+    "acorn": "^7.1.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "10.0.1",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.13.0",
+    "compression-webpack-plugin": "^3.0.1",
     "concurrently": "^4.1.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -142,9 +117,10 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "html-loader": "^0.5.5",
     "markdown-loader": "^5.1.0",
-    "nodemon": "^1.19.1",
+    "react-dev-utils": "^9.0.1",
+    "react-dom": "^16.8.6",
+    "react-markdown": "^4.2.2",
     "tslint": "^5.20.0",
-    "uuid": "^3.3.2",
     "webpack-cli": "^3.3.7"
   }
 }
