--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   },
   "main": "index.js",
   "dependencies": {
+    "@auth0/nextjs-auth0": "^0.10.0",
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
     "dotenv": "^8.2.0",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
