--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "dotenv": "^8.2.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.2.1",
+    "next-seo": "^4.4.0",
+    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
   },
