--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@auth0/nextjs-auth0": "^0.10.0",
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
+    "clsx": "^1.1.0",
     "dotenv": "^8.2.0",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.2.1",
