--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
   "main": "index.js",
   "dependencies": {
     "@auth0/nextjs-auth0": "^0.10.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
     "@material-ui/core": "^4.9.2",
     "@material-ui/icons": "^4.9.1",
     "clsx": "^1.1.0",
