--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@material-ui/icons": "^4.9.1",
     "clsx": "^1.1.0",
     "dotenv": "^8.2.0",
+    "http-status": "^1.4.2",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.2.1",
     "next-seo": "^4.4.0",
