--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "next-seo": "^4.4.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-photo-gallery": "^8.0.0"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^1.13.0",
